<resources>
    <string name="app_name">E-HAUT</string>
    <string name="hello_world">你好，世界！</string>
    <string name="action_settings">设置</string>
    <string name="onlinename">用户名</string>
    <string name="onlineip">地  址</string>
    <string name="usedtime">时  间</string>
    <string name="useddata">流  量</string>
    <string name="logout">注 销</string>
    <string name="service">自服务</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登 录</string>
    <string name="vaildUsername">用户名输入错误</string>
    <string name="vaildPassword">密码输入错误</string>
    <string name="loginFailed">登录失败</string>
    <string name="wait">请等待...</string>
</resources>
