<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/onlinename"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_onlinename"/>

        <TextView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wait"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content" android:id="@+id/onlinename"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/onlineip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_onlineip"/>

        <TextView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wait"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/onlineip"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/usedtime"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_usedtime"/>

        <TextView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wait"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/usedtime"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/useddata"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_useddata"/>

        <TextView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wait"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/useddata"/>
        <!-- Signup Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/ColoredButtonAppcompat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/logout"/>

        <TextView android:id="@+id/link_service2"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/service"
                  android:gravity="center"
                  android:textSize="16dip"/>



    </LinearLayout>
</ScrollView>